project(prv2paje)
cmake_minimum_required(VERSION 2.8)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")

set(PRV2PAJE_VERSION_MAJOR "0")
set(PRV2PAJE_VERSION_MINOR "0")
set(PRV2PAJE_VERSION_PATCH "1")
set(PRV2PAJE_VERSION "${PRV2PAJE_VERSION_MAJOR}.${PRV2PAJE_VERSION_MINOR}.${PRV2PAJE_VERSION_PATCH}")

ADD_SUBDIRECTORY(src)

export(PACKAGE ${PROJECT_NAME})

add_custom_target(uninstall "${CMAKE_COMMAND}" -P "${CMAKE_MODULE_PATH}/uninstall.cmake")
