cmake_minimum_required(VERSION 2.8)
FIND_PACKAGE(PkgConfig)

PKG_CHECK_MODULES(POTI REQUIRED poti>=4)

FILE(GLOB_RECURSE SRC_FILES ${CMAKE_HOME_DIRECTORY}/src/prv2paje/*.cpp)
set(HEADER_DIR ${CMAKE_HOME_DIRECTORY}/src/prv2paje/headers)
FILE(GLOB HEADER_FILES ${HEADER_DIR}/*.h)
include_directories(${HEADER_DIR} ${POTI_INCLUDE_DIRS})

link_directories(${POTI_LIBRARY_DIRS})

add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES})

add_definitions(-D__BUILD_VERSION__="${PRV2PAJE_VERSION}")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${POTI_LIBRARIES})


target_compile_options(${PROJECT_NAME} PUBLIC ${POTI_CFLAGS_OTHER})

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${PRV2PAJE_VERSION} SOVERSION ${PRV2PAJE_VERSION_MAJOR})

install(TARGETS ${PROJECT_NAME} DESTINATION bin)
